# puzzle

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  parser.toml
example/: laplace.pz  simple.pz
include/Puzzle/: PuzzleDialect.h  PuzzleDialect.td  PuzzleOps.h  PuzzleOps.td  PuzzleTypes.h
include/Puzzle/IR/: CMakeLists.txt  PuzzleDialect.h  PuzzleDialect.td  PuzzleOpInterfaces.h  PuzzleOpInterfaces.td  PuzzleOps.h  PuzzleOps.td  PuzzleTypes.h
include/Puzzle/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/puzzle/frontend/: ast.h  parser.h
include/puzzle/mlir/: dialect.h  mlir_gen.h  passes.h  puzzle_base.td  puzzle_interfaces.td  puzzle_ops.td  puzzle_types.h
include/puzzle/util/: err.h
lib/: CMakeLists.txt
lib/Puzzle/: CMakeLists.txt  PuzzleDialect.cpp  PuzzleOps.cpp  PuzzleTypes.cpp
lib/Puzzle/IR/: CMakeLists.txt  PuzzleDialect.cpp  PuzzleOpInterfaces.cpp  PuzzleOps.cpp  PuzzleTypes.cpp
lib/Puzzle/Transforms/: CMakeLists.txt  PassDetail.h  PuzzleToAffineLoweringPass.cpp  PuzzleToGPULoweringPass.cpp  PuzzleToGPULoweringPass.cpp.bak  PuzzleToGPULoweringPass.cpp.bak.bak  PuzzleToGPULoweringPass.cpp.bak.bak.bak  ReplaceAllocWithParamPass.cpp  ShapeInferencePass.cpp  StencilFusionPass.cpp  StencilInlinePass.cpp  TimeInsertionPass.cpp
lib/Puzzle/Transforms/old/: TimeInsertionPass.cpp
puzzle-opt/: CMakeLists.txt  puzzle-opt.cpp
puzzle-translate/: CMakeLists.txt  parser.toml  puzzle-translate.cpp
puzzle-translate/dsl/: analyst.cpp  analyst.h  ast.cpp  ast.h  context.cpp  context.h  parser.cpp  parser.h
puzzle-translate/header/: codegen.cpp  codegen.h  template.h
script/: build.sh  gen_obj.sh  laplace_check.c  mlir_gen.sh  parser_gen.sh
src/: puzzle.cpp
src/frontend/: ast.cpp  parser.cpp
src/mlir/: dialect.cpp  lower_to_affine.cpp  lower_to_llvm.cpp  mlir_gen.cpp  puzzle_types.cpp
test/: 27point.mlir  27point.pz  7point.cpp  7point.mlir  7point.pz  7point_compile.sh  CMakeLists.txt  README.md  clean.sh  compile_ll.sh  cuda_env.sh  env.sh  err.pz  filter.cpp  filter.mlir  filter.pz  filter_compile.sh  laplacian.cpp  laplacian.mlir  laplacian.pz  laplacian_compile.sh  nh_p_grad.mlir  nh_p_grad.pz  stencil_util.h  update.sh
test/example/: 27point.pz  7point.pz  filter.pz  fusion.pz
test/mlir/: 27point.mlir  7point.mlir  filter.mlir  nh_p_grad.mlir  update.sh
